--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Title goes here</title>
+    <title>Portfolio</title>
   </head>
   <body>
-    Page elements go here.
+    I am making this page for my WebGIS course. This course is called GEOG4046.
   </body>
 </html>
