--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-    I am making this page for my WebGIS course. This course is called GEOG4046.
+    I am making this page for my WebGIS course.
+      <div>This course is called GEOG4046.</div>
   </body>
 </html>
