--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     I am making this page for my WebGIS course.
       <div>This course is called GEOG4046.</div>
+    I am trying to figure out what div does.
   </body>
 </html>
