--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
   <head>
     <title>Portfolio</title>
   </head>
+    <title>My Portfloio</title>
   <body>
-    I am making this page for my WebGIS course.
+      I am making this page for my WebGIS course.
       <div>This course is called GEOG4046.</div>
     I am trying to figure out what div does.
   </body>
