--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
       I am making this page for my WebGIS course.
       <div>This course is called GEOG4046.</div>
     I am trying to figure out what div does.
+    test test test
   </body>
 </html>
