--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
   <head>
-    <title>Portfolio</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-    <title>My Portfloio</title>
   <body>
-      I am making this page for my WebGIS course.
-      <div>This course is called GEOG4046.</div>
-    I am trying to figure out what div does.
-    test test test
+    <header id="masthead">
+      <h1>My Portfolio</h1>
+      <h2 class="subtitle">This is a collection of maps I created for GEOG 4046.</h2>
+      <hr>
+    </header>
+    <article>
+      <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3"> Pittsburgh</a>
+    </article>
+    <p>
+      Click the following link to view Book Assignment 1, which is a map tour of Pittsburgh, Pensylvania.
+      <br><a href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3"> Book Assignment 1</a></br>
+    </p>
   </body>
 </html>
