--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header id="masthead">
-      <h1>My Portfolio</h1>
-      <h2 class="subtitle">This is a collection of maps I created for GEOG 4046.</h2>
+    <header>
+      <img src="Header2.jpg" width="1200" height="200">
+      <h1 class="subtitle">A collection of maps I created for GEOG 4046.</h1>
       <hr>
     </header>
-    <article>
-      <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3"> Pittsburgh</a>
-    </article>
     <p>
-      Click the following link to view Book Assignment 1, which is a map tour of Pittsburgh, Pensylvania.
-      <br><a href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3"> Book Assignment 1</a></br>
+      <img src="Book_Assignment_01.jpg" width="500" height="250">
+      <br><a id="maplink" href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3"> Book Assignment 1</a></br>
+      Book Assignment 1 consits of an interesting story map tour of Pittsburgh, Pennsylvania.
+    </p>
+    <p>
+      <img src="Book_Assignment_02.jpg" width="500" height="250" href="https://arcg.is/HTPj8">
+      <br><a id="maplink" href="https://arcg.is/HTPj8"> Book Assignment 2</a><br>
+      Book Assignment 2 compares average property values in different cities across America over time.
     </p>
   </body>
 </html>
