--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <img src="Header2.jpg" width="1200" height="200">
+      <img src="Header2.JPG" width="1200" height="200">
       <h1 class="subtitle">A collection of maps I created for GEOG 4046.</h1>
       <hr>
     </header>
