--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       <hr>
     </header>
     <p>
-      <img src="Book_Assignment_01.jpg" width="500" height="250">
+      <img src="Book_Assignment_01.JPG" width="500" height="250">
       <br><a id="maplink" href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3"> Book Assignment 1</a></br>
       Book Assignment 1 consits of an interesting story map tour of Pittsburgh, Pennsylvania.
     </p>
     <p>
-      <img src="Book_Assignment_02.jpg" width="500" height="250" href="https://arcg.is/HTPj8">
+      <img src="Book_Assignment_02.JPG" width="500" height="250" href="https://arcg.is/HTPj8">
       <br><a id="maplink" href="https://arcg.is/HTPj8"> Book Assignment 2</a><br>
       Book Assignment 2 compares average property values in different cities across America over time.
     </p>
