--- a/index.html
+++ b/index.html
@@ -6,18 +6,31 @@
   <body>
     <header>
       <img src="Header2.JPG" width="1200" height="200">
-      <h1 class="subtitle">A collection of maps I created for GEOG 4046.</h1>
+      <h1 id="subtitle">A collection of maps I created for GEOG 4046.</h1>
       <hr>
     </header>
     <p>
-      <img src="Book_Assignment_01.JPG" width="500" height="250">
-      <br><a id="maplink" href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3"> Book Assignment 1</a></br>
+      <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
+        <img src="Book_Assignment_01.JPG" class="image">
+      </a>
+      <br>
+        <a class="maplink" href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
+          Book Assignment 1
+        </a>
+      </br>
       Book Assignment 1 consits of an interesting story map tour of Pittsburgh, Pennsylvania.
     </p>
     <p>
-      <img src="Book_Assignment_02.JPG" width="500" height="250" href="https://arcg.is/HTPj8">
-      <br><a id="maplink" href="https://arcg.is/HTPj8"> Book Assignment 2</a><br>
-      Book Assignment 2 compares average property values in different cities across America over time.
+      <a href="https://www.arcgis.com/apps/View/index.html?appid=dbd5b6aafe4f434b97fb5ff954bffed8">
+        <img src="Book_Assignment_02.JPG" class="image">
+      </a>
+      <br>
+        <a class="maplink" href="https://www.arcgis.com/apps/View/index.html?appid=dbd5b6aafe4f434b97fb5ff954bffed8">
+        Book Assignment 2
+        </a>
+      </br>
+        Book Assignment 2 compares average property values in different cities across America over time.
     </p>
+    <script src="script.js"></script>
   </body>
 </html>
