image size test

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <p>
       <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
-        <img src="Book_Assignment_01.JPG" class="image">
+        <img src="Book_Assignment_01.JPG" width="500" height="250">
       </a>
       <br>
         <a class="maplink" href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
