--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <p>
       <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
-        <img src="Book_Assignment_01.JPG" class="image">
+        <img class="image" src="Book_Assignment_01.JPG">
       </a>
       <br>
         <a class="maplink" href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
@@ -22,7 +22,7 @@
     </p>
     <p>
       <a href="https://www.arcgis.com/apps/View/index.html?appid=dbd5b6aafe4f434b97fb5ff954bffed8">
-        <img src="Book_Assignment_02.JPG" class="image">
+        <img class="image" src="Book_Assignment_02.JPG">
       </a>
       <br>
         <a class="maplink" href="https://www.arcgis.com/apps/View/index.html?appid=dbd5b6aafe4f434b97fb5ff954bffed8">
