--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
       </br>
         Book Assignment 2 compares average property values in different cities across America over time.
     </p>
+    <p>
+    <a href="https://oguidry1345.maps.arcgis.com/apps/GeoForm/index.html?appid=80d6daed0ba945179e3d051e47663b9c">
+      <img class="image" src="Book_Assignment_03a.JPG">
+    </a>
+    <br>
+      <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/GeoForm/index.html?appid=80d6daed0ba945179e3d051e47663b9c">
+        Book Assignment 3a
+      </a>
+    </br>
+    Book Assignment 3a is a web form that allows users to report sightings of police suspects on LSU's campus.
+  </p>
     <script src="script.js"></script>
   </body>
 </html>
