--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
     </br>
     Book Assignment 3a is a web form that allows users to report sightings of police suspects on LSU's campus.
   </p>
+  <p>
+  <a href="https://oguidry1345.maps.arcgis.com/apps/webappviewer/index.html?id=2f82fb2f48104de9b24213babba82f27">
+    <img class="image" src="Book_Assignment_05.JPG">
+  </a>
+  <br>
+    <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/webappviewer/index.html?id=2f82fb2f48104de9b24213babba82f27">
+      Book Assignment 5
+    </a>
+  </br>
+  Book Assignment 5 is an interactive map of East Baton Rouge schools that allows the user to
+  apply filters and search for schools based on their needs.
+  </p>
     <script src="script.js"></script>
   </body>
 </html>
