--- a/index.html
+++ b/index.html
@@ -51,8 +51,18 @@
       Book Assignment 5
     </a>
   </br>
-  Book Assignment 5 is an interactive map of East Baton Rouge schools that allows the user to
-  apply filters and search for schools based on their needs.
+  Book Assignment 5 is an interactive map of East Baton Rouge schools that allows the user to apply filters and search for schools based on their needs.
+  </p>
+  <p>
+  <a href="https://oguidry1345.maps.arcgis.com/apps/TimeAware/index.html?appid=3c2ca2a6142d41c18522c221a472651a">
+    <img class="image" src="Book_Assignment_06a.JPG">
+  </a>
+  <br>
+    <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/TimeAware/index.html?appid=3c2ca2a6142d41c18522c221a472651a">
+      Book Assignment 6a
+    </a>
+  </br>
+  Book Assignment 6a has a time slider feature that allows the user to see population growth in US cities over time.
   </p>
     <script src="script.js"></script>
   </body>
