--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <header>
-      <img src="Header2.JPG" width="1200" height="200">
+      <img src="images/Header2.JPG" width="1200" height="200">
       <h1 id="subtitle">A collection of maps I created for GEOG 4046.</h1>
       <hr>
     </header>
     <p>
       <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
-        <img class="image" src="Book_Assignment_01.JPG">
+        <img class="image" src="images/Book_Assignment_01.JPG">
       </a>
       <br>
         <a class="maplink" href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
@@ -22,7 +22,7 @@
     </p>
     <p>
       <a href="https://www.arcgis.com/apps/View/index.html?appid=dbd5b6aafe4f434b97fb5ff954bffed8">
-        <img class="image" src="Book_Assignment_02.JPG">
+        <img class="image" src="images/Book_Assignment_02.JPG">
       </a>
       <br>
         <a class="maplink" href="https://www.arcgis.com/apps/View/index.html?appid=dbd5b6aafe4f434b97fb5ff954bffed8">
@@ -33,7 +33,7 @@
     </p>
     <p>
     <a href="https://oguidry1345.maps.arcgis.com/apps/GeoForm/index.html?appid=80d6daed0ba945179e3d051e47663b9c">
-      <img class="image" src="Book_Assignment_03a.JPG">
+      <img class="image" src="images/Book_Assignment_03a.JPG">
     </a>
     <br>
       <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/GeoForm/index.html?appid=80d6daed0ba945179e3d051e47663b9c">
@@ -44,7 +44,7 @@
   </p>
   <p>
   <a href="https://oguidry1345.maps.arcgis.com/apps/webappviewer/index.html?id=2f82fb2f48104de9b24213babba82f27">
-    <img class="image" src="Book_Assignment_05.JPG">
+    <img class="image" src="images/Book_Assignment_05.JPG">
   </a>
   <br>
     <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/webappviewer/index.html?id=2f82fb2f48104de9b24213babba82f27">
@@ -55,7 +55,7 @@
   </p>
   <p>
   <a href="https://oguidry1345.maps.arcgis.com/apps/TimeAware/index.html?appid=3c2ca2a6142d41c18522c221a472651a">
-    <img class="image" src="Book_Assignment_06a.JPG">
+    <img class="image" src="images/Book_Assignment_06a.JPG">
   </a>
   <br>
     <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/TimeAware/index.html?appid=3c2ca2a6142d41c18522c221a472651a">
