--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
         <a class="maplink" href="https://www.arcgis.com/apps/MapTour/index.html?appid=5fdd5b64b4d849e0a68f3d016d0d91c3">
           Book Assignment 1
         </a>
-      </br>
+      <br>
       Book Assignment 1 consits of an interesting story map tour of Pittsburgh, Pennsylvania.
     </p>
     <p>
@@ -28,7 +28,7 @@
         <a class="maplink" href="https://www.arcgis.com/apps/View/index.html?appid=dbd5b6aafe4f434b97fb5ff954bffed8">
         Book Assignment 2
         </a>
-      </br>
+      <br>
         Book Assignment 2 compares average property values in different cities across America over time.
     </p>
     <p>
@@ -39,7 +39,7 @@
       <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/GeoForm/index.html?appid=80d6daed0ba945179e3d051e47663b9c">
         Book Assignment 3a
       </a>
-    </br>
+    <br>
     Book Assignment 3a is a web form that allows users to report sightings of police suspects on LSU's campus.
   </p>
   <p>
@@ -50,7 +50,7 @@
     <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/webappviewer/index.html?id=2f82fb2f48104de9b24213babba82f27">
       Book Assignment 5
     </a>
-  </br>
+  <br>
   Book Assignment 5 is an interactive map of East Baton Rouge schools that allows the user to apply filters and search for schools based on their needs.
   </p>
   <p>
@@ -61,7 +61,7 @@
     <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/TimeAware/index.html?appid=3c2ca2a6142d41c18522c221a472651a">
       Book Assignment 6a
     </a>
-  </br>
+  <br>
   Book Assignment 6a has a time slider feature that allows the user to see population growth in US cities over time.
   </p>
     <script src="script.js"></script>
