--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         Book Assignment 2 compares average property values in different cities across America over time.
     </p>
     <p>
-    <a href="https://oguidry1345.maps.arcgis.com/apps/GeoForm/index.html?appid=80d6daed0ba945179e3d051e47663b9c">
       <img class="image" src="images/Book_Assignment_03a.JPG">
-    </a>
     <br>
       <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/GeoForm/index.html?appid=80d6daed0ba945179e3d051e47663b9c">
         Book Assignment 3a
@@ -43,9 +41,7 @@
     Book Assignment 3a is a web form that allows users to report sightings of police suspects on LSU's campus.
   </p>
   <p>
-  <a href="https://oguidry1345.maps.arcgis.com/apps/webappviewer/index.html?id=2f82fb2f48104de9b24213babba82f27">
     <img class="image" src="images/Book_Assignment_05.JPG">
-  </a>
   <br>
     <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/webappviewer/index.html?id=2f82fb2f48104de9b24213babba82f27">
       Book Assignment 5
@@ -54,9 +50,7 @@
   Book Assignment 5 is an interactive map of East Baton Rouge schools that allows the user to apply filters and search for schools based on their needs.
   </p>
   <p>
-  <a href="https://oguidry1345.maps.arcgis.com/apps/TimeAware/index.html?appid=3c2ca2a6142d41c18522c221a472651a">
     <img class="image" src="images/Book_Assignment_06a.JPG">
-  </a>
   <br>
     <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/TimeAware/index.html?appid=3c2ca2a6142d41c18522c221a472651a">
       Book Assignment 6a
@@ -64,6 +58,7 @@
   <br>
   Book Assignment 6a has a time slider feature that allows the user to see population growth in US cities over time.
   </p>
-    <script src="script.js"></script>
+    <script src="code-assignments/functions.js"></script>
+    <script src="code-assignments/code-assignment-7a.js"></script>
   </body>
 </html>
