--- a/map/webmap-index.html
+++ b/map/webmap-index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Webmap 3</title>
+    <title>Webmap 4</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css">
     <link rel="stylesheet" href="map.css"
   </head>
   <body>
     <div id="webmap"></div>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-    <script src="webmap-assignment-03.js">
-    </script>
+    <script src="statedemographics.js"></script>
+    <script src="webmap-assignment-04.js"></script>
   </body>
 </html>
