--- a/index.html
+++ b/index.html
@@ -32,32 +32,16 @@
         Book Assignment 2 compares average property values in different cities across America over time.
     </p>
     <p>
-      <img class="image" src="images/Book_Assignment_03a.JPG">
-    <br>
-      <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/GeoForm/index.html?appid=80d6daed0ba945179e3d051e47663b9c">
-        Book Assignment 3a
+      <a href="https://oguidr4.github.io/good_eats/index.html">
+        <img class="image" src="images/Final.JPG">
       </a>
-    <br>
-    Book Assignment 3a is a web form that allows users to report sightings of police suspects on LSU's campus.
-  </p>
-  <p>
-    <img class="image" src="images/Book_Assignment_05.JPG">
-  <br>
-    <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/webappviewer/index.html?id=2f82fb2f48104de9b24213babba82f27">
-      Book Assignment 5
-    </a>
-  <br>
-  Book Assignment 5 is an interactive map of East Baton Rouge schools that allows the user to apply filters and search for schools based on their needs.
-  </p>
-  <p>
-    <img class="image" src="images/Book_Assignment_06a.JPG">
-  <br>
-    <a class="maplink" href="https://oguidry1345.maps.arcgis.com/apps/TimeAware/index.html?appid=3c2ca2a6142d41c18522c221a472651a">
-      Book Assignment 6a
-    </a>
-  <br>
-  Book Assignment 6a has a time slider feature that allows the user to see population growth in US cities over time.
-  </p>
+      <br>
+        <a class="maplink" href="https://oguidr4.github.io/good_eats/index.html">
+        Final Project
+        </a>
+      <br>
+        "Good Eats" showcases all of my favorite close-to-campus restaurants.
+    </p>
     <script src="code-assignments/functions.js"></script>
     <script src="code-assignments/code-assignment-7a.js"></script>
   </body>
